--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,7 +4,7 @@
   background-color: #343D68;
   color: #fff;
 
-  p{
+  p {
     font-size: 1.4rem;
   }
 }
@@ -36,14 +36,16 @@
   list-style: none;
 }
 
-.social-links img, .github-link img {
+.social-links img,
+.github-link img {
   width: clamp(22px, 10vw, 70px);
   height: auto;
 }
 
 .footer-projects {
-  margin-top: 24px;
+  margin: 24px 0 0;
   font-size: 14px;
+
 }
 
 .github-link {
@@ -51,7 +53,7 @@
   align-items: center;
   justify-content: center;
   gap: 8px;
-  margin: 8px auto 0;
+  margin: 0;
   color: #7fd3ff;
   text-decoration: none;
 }
@@ -105,10 +107,6 @@
     height: auto;
   }
 
-  .footer-projects {
-    margin-top: 24px;
-    font-size: 14px;
-  }
 
   .github-link {
     display: flex;
